--- a/src/styles/PropertyListing.css
+++ b/src/styles/PropertyListing.css
@@ -21,7 +21,6 @@
   transform-style: preserve-3d;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   border-radius: 40px;
-  margin-top: 10%;
 }
 
 .propertylisting {
@@ -83,4 +82,22 @@
 .flip-card-back h1,
 .flip-card-back p {
   margin: 10px;
+}
+.propertyList {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  position: absolute;
+  top: 20%;
+  left: 10%;
+  right: 10%;
+}
+
+@media screen and (max-width: 800px) {
+  .propertyList {
+    position: absolute;
+    top: 35%;
+    left: 10%;
+    right: 10%;
+  }
 }
